tests/ui/feature-gates/feature-gate-linkage.stderr
error[E0658]: the `linkage` attribute is experimental and not portable across platforms
  --> $DIR/feature-gate-linkage.rs:2:5
   |
LL |     #[linkage = "extern_weak"] static foo: *mut isize;
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: see issue #29603 <https://github.com/rust-lang/rust/issues/29603> for more information
   = help: add `#![feature(linkage)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0658`.
